@@ -5,6 +5,7 @@ package io.clientcore.core.instrumentation.logging;
 
 import io.clientcore.core.implementation.AccessibleByteArrayOutputStream;
 import io.clientcore.core.implementation.instrumentation.DefaultLogger;
+import io.clientcore.core.implementation.util.ImplUtils;
 import io.clientcore.core.instrumentation.InstrumentationContext;
 import io.clientcore.core.instrumentation.tracing.Span;
 import io.clientcore.core.serialization.json.JsonOptions;
@@ -16,10 +17,12 @@ import java.io.OutputStream;
 import java.io.PrintStream;
 import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -45,7 +48,13 @@ public final class InstrumentationTestUtils {
 
     public static List<Map<String, Object>> parseLogMessages(AccessibleByteArrayOutputStream logCaptureStream) {
         String fullLog = logCaptureStream.toString(StandardCharsets.UTF_8);
-        return fullLog.lines().map(InstrumentationTestUtils::parseLogLine).toList();
+        // Changing this from String.lines() has a slight runtime difference where lines() won't have any output if the
+        // String is empty where as String.split("\\R") will have an empty string in the array.
+        // Filter out any empty lines.
+        return Arrays.stream(fullLog.split("\\R"))
+            .filter(line -> !ImplUtils.isNullOrEmpty(line)) // Filter out empty lines
+            .map(InstrumentationTestUtils::parseLogLine)
+            .collect(Collectors.toList());
     }
 
     private static Map<String, Object> parseLogLine(String logLine) {
